@@ -510,7 +510,7 @@ to print the corresponding values, or T for all of them.")
     (format stream (TEXT "a generic function."))
     (unless (clos::generic-function-undeterminedp obj)
       (terpri stream)
-      (format stream (TEXT "Argument list: ~A")
+      (format stream (TEXT "Argument list: ~:S")
               (clos:generic-function-lambda-list obj)))
     (let ((mc (clos::method-combination-name (clos:generic-function-method-combination obj))))
       (unless (eq mc 'STANDARD)
